# physionet-build

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  FILE-STORAGE.md  GuideForNewDevelopers.md  Makefile  README.md  docker-compose.yml  install_log.txt  pyproject.toml  python-requirements.txt  requirements.txt  shippable.yml  test-upgrade.sh  theme_generator.sh  write.sh
.github/workflows/: docker-build-test.yml  physionet-build-test.yml  physionet-upgrade-test.yml
config/: README.md
demo-files/: aws_credentials
deploy/: MIGRATION-CHECKLIST.md  README.md  custom-mime.types  emperor.uwsgi.service  log-rotate  physionet_nginx.conf  physionet_uwsgi.ini  post-receive  set-quota.sh  staging_physionet_nginx.conf  update  uwsgi.service  uwsgi_params
deploy/test-server/: README  install-pn-test-server  kvm-pntest  kvm-pntest-create  pn-test-server.preseed  ssh-install-pn-test-server
django-old/: README.md  db.sqlite3  manage.py
docker/: dev-entrypoint.sh  docker-compose.test.yml  init.sh  test-entrypoint.sh  uwsgi.ini
docker/uwsgi-json-logging-plugin/: .gitignore  LICENSE  README.md  build_plugin.sh  escape_json.c
physionet-django/: .coveragerc  example_models.py  ideas.md  insertdemocontent.py  manage.py  resetdbs.py  resetdbs.sh  rmmigrations.sh  schema.py  tests.py
physionet-django/authorization/: access.py  models.py
physionet-django/catalog/: admin.py  apps.py  models.py  utility.py  views.py
physionet-django/console/: admin.py  apps.py  forms.py  navbar.py  services.py  tasks.py  test_views.py  urls.py  utility.py  views.py
physionet-django/cwave/: apps.py  forms.py  views.py
physionet-django/events/: admin.py  enums.py  forms.py  models.py  tests_views.py  urls.py  utility.py  validators.py  views.py  widgets.py
physionet-django/export/: apps.py  schema.py  serializers.py  tests.py  urls.py  views.py
physionet-django/lightwave/: apps.py  tests.py  urls.py  views.py
physionet-django/logger/: handlers.py  models.py
physionet-django/notification/: admin.py  models.py  urls.py  utility.py  views.py
physionet-django/oauth/: apps.py  tests.py  urls.py  views.py
physionet-django/physiobank/: admin.py  apps.py  database_indices.py  database_indices_backupold.py  models.py  urls.py  views.py
physionet-django/physionet/: admin.py  aws.py  citi_training_module.py  context_processors.py  cron.py  enums.py  forms.py  gcp.py  gcs.py  log.py  models.py  settings.py  storage.py  test_context_processor.py  test_gcs.py  test_urls.py  test_utility.py  tests.py  urls.py  utility.py  views.py  wsgi.py
physionet-django/physionetworks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
physionet-django/physiotoolkit/: apps.py  models.py  urls.py
physionet-django/project/: DBS.tsv  admin.py  apps.py  forms.py  models-old.py  models.py  pbmigration.py  pnmigration.py  projectfiles.py  quota.py  serializers.py  test_browser.py  test_projectfiles.py  test_publish.py  test_s3.py  test_views.py  tests.py  urls.py  utility.py  validators.py  views.py
physionet-django/search/: forms.py  test_views.py  urls.py  views.py
physionet-django/sharing/: apps.py  models.py
physionet-django/sso/: auth.py  context_processors.py  forms.py  test_auth.py  test_views.py  urls.py  views.py
physionet-django/static/: wfdbcal
physionet-django/static-overrides/: .gitignore
physionet-django/templates/: 403.html  404.html  500.html  about_physionet.html  base.html  base_blank.html  base_css.html  base_js.html  base_js_bottom.html  base_js_top.html  challenge.html  challenges.html  contact.html  content_index.html  content_list.html  data.html  database_index.html  descriptive_inline_form_snippet.html  event_entries.html  event_home.html  event_participant.html  featured-news.html  footer.css  footer.html  form_snippet.html  form_snippet_no_labels.html  home.html  inline_form_snippet.html  js_css.html  message_snippet.html  modal_end.html  modal_start.html  navbar.html  navbar_content.html  site_maintenance.html  software.html  submit.html
physionet-django/tests/: test_models.py  (+1 more)
(+1378 files in other folders)
