[tool.poetry]
name = "physionet-build"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
bleach = "^3.3.0"
chardet = "^3.0.4"
Django = "4.1.7"
django-autocomplete-light = "^3.9.4"
django-background-tasks-updated = "=1.2.7"
django-ckeditor = "6.5.1"
djangorestframework = "3.14.0"
google-cloud-storage = "^1.41.1"
html2text = "^2018.1.9"
Pillow = "^9.3.0"
python-decouple = "^3.1"
uWSGI = "2.0.21"
pyOpenSSL = "^19.0.0"
google-api-python-client = "^1.7.9"
psycopg2 = "2.9.5"
httplib2 = "^0.19.0"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.0"
sentry-sdk = "^1.4.3"
python-json-logger = "^2.0.2"
django-storages = { version = "^1.11.1", extras = ["google"] }
"pdfminer.six" = "^20211012"
requests = "2.27.1"
cffi = "^1.15.1"
pytz = "^2022.1"
django-sass = "1.1.0"
zxcvbn = "^4.4.28"
certifi = "^2022.12.7"
setuptools = "65.5.1"
django-js-asset = "2.0.0"
hdn-research-environment = "^1.4.0"

[tool.poetry.dev-dependencies]
coverage = "^4.4.2"
django-debug-toolbar = "^3.2.4"
requests = "^2.21.0"
requests-mock = "^1.7.0"
selenium = "^3.141.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
